miosys-gateway-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: miosys-gateway
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: http
    hostname: "*.com.br"
    port: 80 
    protocol: HTTP
    allowedRoutes:
      namespaces:
         from: All 
  addresses:
    - type: NamedAddress
      value: miosys-api-ip
