miosys-gateway-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: miosys-gateway
  annotations:
    cert-manager.io/issuer: letsencrypt-production
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: http
    hostname: "*.com.br"
    port: 80 
    protocol: HTTP
    allowedRoutes:
      namespaces:
         from: All
  - name: https
    hostname: miosys.com.br  # Required
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate # Required. "Terminate" is the only supported mode.
      certificateRefs:
      - name: miosys-com-br-tls # Required
        kind: Secret # Required. "Secret" is the only valid value.
        group: core # Required. "core" is the only valid value.
    allowedRoutes:
      namespaces:
        from: All
  addresses:
    - type: NamedAddress
      value: miosys-api-ip
