miosys-gateway_http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: miosys-gateway
  namespace: default
  annotations:
    cert-manager.io/issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: miosys-gateway-web
    hostname: "*.com.br"
    port: 80 
    protocol: HTTP
    allowedRoutes:
      namespaces:
         from: All 
  addresses:
    - type: NamedAddress
      value: miosys-api-ip
