miosys-gateway_https.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: miosys-gateway
  annotations:
    cert-manager.io/issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: miosys-gateway-web
    hostname: "*.com.br"
    port: 80 
    protocol: HTTP
    allowedRoutes:
      namespaces:
         from: All 
  - name: https
    hostname: miosys.com.br
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: secret-tls
    allowedRoutes:
      namespaces:
        from: All
  addresses:
    - type: NamedAddress
      value: miosys-api-ip
