miosys-prod-web-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: miosys-prod-web
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    addresses:
    - type: IPAddress
      value: 34.176.33.112
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Same
