miosys-api-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: miosys-api-route
spec:
  parentRefs:
    - kind: Gateway
      name: miosys-gateway
  hostnames:
  - api.miosys.com.br
  rules:
  # StockCounter
  - matches:     
    - path:
        type: PathPrefix
        value: /stockcounter
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: miosys-rest-api-stock-counter-service
      port: 8080
  # Default
  - matches:     
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: miosys-rest-api-default-service
      port: 8080
