miosys-prod-web.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: miosys-prod-web
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Same
---
# Routes
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miosys-http-route
  namespace: default
spec:
  parentRefs:
  - name: miosys-prod-web
  rules:
  # StockCounter
  - matches:     
    - path:
        type: PathPrefix
        value: /api/stockcounter
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: miosys-rest-api-stock-counter-service
      port: 80
  # ConnectSale
  - matches:     
    - path:
        type: PathPrefix
        value: /api/connectsale
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: miosys-rest-api-connect-sale-service
      port: 80
  # Default route
  - matches:
    - path:
        type: PathPrefix
        value: /api
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: miosys-rest-api-default-service
      port: 80
