miosys-route-force-https.yaml
# Force all to https
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: miosys-filter-redirect-subdomains-https-route
spec:
  parentRefs:
    - kind: Gateway
      name: miosys-gateway
      sectionName: http
  hostnames:
  - miosys.com.br
  - "*.miosys.com.br"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
# rewrite https://example.com -> https://www.example.com
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: miosys-filter-rewrite-domain-www-route
spec:
  parentRefs:
    - kind: Gateway
      name: miosys-gateway
      sectionName: https-root
  hostnames:
  - miosys.com.br
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        hostname: www.miosys.com.br
        statusCode: 301
