miosys-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: miosys-route
spec:
  parentRefs:
    - kind: Gateway
      name: miosys-gateway
      sectionName: https
  hostnames:
  - www.miosys.com.br
  rules:
  - matches:     
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: nginx-service
      port: 8080
