miosys-routex.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: miosys-route
spec:
  parentRefs:
  - kind: Gateway
    name: miosys-gateway
  hostnames:
  - "miosys.com.br"
  rules:
  - backendRefs:
    - name: miosys-rest-api-stock-counter-service
      port: 8080
